# Chaine-youtube-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
api/: index.py
examples/: sample.csv
productivity_kit/: __init__.py  __main__.py  api.py  cli.py  csv_tools.py  home_html.py  jobs.py  mail_imap.py  notify.py  organize.py  schemas.py  settings.py  youtube.py
public/: manifest.json
public/pwa/: index.html  manifest.json  sw.js
schedules/: crontab.example
scripts/: csv_summary.py  organize_folder.py
tests/: test_api.py  test_kit.py  test_pwa.py  test_youtube.py
