[project]
name = "chaine-youtube-kit"
version = "0.2.0"
description = "Kit productivité FastAPI (CSV, digest, IMAP, webhooks)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
]

[tool.vercel]
entrypoint = "productivity_kit.api:app"
